--- a/multiClassLogRegExer.ipynb
+++ b/multiClassLogRegExer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predict flower type using multiclassification Logistic Regression"
+    "Predict flower type using multiclass classification Logistic Regression"
    ]
   },
   {
